# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.993.2.49 2009-11-06 07:58:49 tt Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.6 (2009/??/??)
 - (2009/11/06) Fixed bug#2948 - renamed crypt option "md5" to "md5-crypt" to
   avoid missunderstanding
 - (2009/10/26) Fixed bug#4455 - Input field in Preferences of a Dashboard
    module doesn't save settings.
 - (2009/10/26) Fixed bug#4454 - restore.pl is not working.
 - (2009/10/26) Fixed bug#4447 - TimeUnits not saved in AgentTicketMove.pm when
    omitting a note.
 - (2009/10/22) Fixed bug#4188 - Restore original subject check in AgentTicketMerge.
 - (2009/10/21) Fixed bug#4232 - SpellChecker Customer-Interface is not
    working.
 - (2009/10/19) Fixed bug#4433 - StateDefault is being ignored in when composing
    an email answer, current ticket state or first one in list gets selected.

2.4.5 (2009/10/15)
 - (2009/10/12) Fixed bug#3541 - Deleting tickets is not possible when using
    Full Text Search Index on MS-SQL or PostgreSQL.
 - (2009/10/12) Fixed bug#4392 - TicketCounter.log is created after permissions
    are set.
 - (2009/10/07) Updated cpan module TEXT::CSV to version 1.14 to
    fix bug#4195 - Import with leading 0 in a field not possible.
 - (2009/10/07) Fixed bug#3581 - Wrong German translation of "no".
 - (2009/10/07) Fixed bug#4397 - QueueView shows wrong filter name.
 - (2009/10/07) Fixed bug#4395 - Can't delete locked tickets via GenericAgent
    on PostgreSQL and MS-SQL databases.
 - (2009/10/07) Fixed bug#4367 - Generic agent produces TicketNumberLookup error
    messages.
 - (2009/10/05) Fixed bug#3793 - UTF-8 PostgreSQL database encode issues on
    incoming emails.
 - (2009/10/05) Updated Spanish translation, thanks to Emiliano Augusto!