@@ -2,7 +2,7 @@
 # AdminCustomerCompanyForm.dtl - provides HTML form for AdminCustomerCompany
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: AdminCustomerCompanyForm.dtl,v 1.8 2009-03-04 18:51:12 tr Exp $
+# $Id: AdminCustomerCompanyForm.dtl,v 1.8.2.1 2009-11-06 09:11:30 tt Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -11,162 +11,162 @@
 
 <!-- dtl:block:Overview -->
 <table border="0" width="100%" cellspacing="0" cellpadding="3">
-  <tr>
-    <td colspan="2" class="mainhead">
-      $Env{"Box0"}$Text{"Customer Company Management"}$Env{"Box1"}
-    </td>
-  </tr>
-  <tr>
-    <td width="30%" class="mainbody">
-      <form action="$Env{"CGIHandle"}" method="post">
-        <input type="hidden" name="Action" value="$Env{"Action"}"/>
-        <input type="hidden" name="Subaction" value=""/>
-        <table width="100%" cellspacing="0" cellpadding="4">
-          <tr>
-            <td class="contenthead">$Text{"Search"}:</td>
-          </tr>
-          <tr>
-            <td class="contentbody">
-              <table>
-                <tr>
-                  <td class="contentkey">$Text{"Search for"}:</td>
-                  <td class="contentvalue"><input type="text" name="Search" value="$QData{"Search"}" size="25"/></td>
-                </tr>
-              </table>
-            </td>
-          </tr>
-          <tr>
-            <td class="contentfooter">
-              <input class="button" type="submit" value="$Text{"Search"}"/>
-            </td>
-          </tr>
-        </table>
-      </form>
-      <br/>
-      <form action="$Env{"CGIHandle"}" method="post">
-        <input type="hidden" name="Action" value="$Env{"Action"}"/>
-        <input type="hidden" name="Subaction" value="Add"/>
-        <table width="100%" cellspacing="0" cellpadding="4">
-          <tr>
-            <td class="contenthead">$Text{"Add Customer Company"}:</td>
-          </tr>
-          <tr>
-            <td class="contentbody">
-              $Text{"Add a new Customer Company."}
-            </td>
-          </tr>
-          <tr>
-            <td class="contentfooter">
-              <input class="button" type="submit" value="$Text{"Add"}"/>
-            </td>
-          </tr>
-        </table>
-      </form>
-    </td>
-    <td width="70%" class="mainbody">
+    <tr>
+        <td colspan="2" class="mainhead">
+            $Env{"Box0"}$Text{"Customer Company Management"}$Env{"Box1"}
+        </td>
+    </tr>
+    <tr>
+        <td width="30%" class="mainbody">
+            <form action="$Env{"CGIHandle"}" method="post">
+                <input type="hidden" name="Action" value="$Env{"Action"}"/>
+                <input type="hidden" name="Subaction" value=""/>
+                <table width="100%" cellspacing="0" cellpadding="4">
+                    <tr>
+                        <td class="contenthead">$Text{"Search"}:</td>
+                    </tr>
+                    <tr>
+                        <td class="contentbody">
+                            <table>
+                                <tr>
+                                    <td class="contentkey">$Text{"Search for"}:</td>
+                                    <td class="contentvalue"><input type="text" name="Search" value="$QData{"Search"}" size="25"/></td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="contentfooter">
+                            <input class="button" type="submit" value="$Text{"Search"}"/>
+                        </td>
+                    </tr>
+                </table>
+            </form>
+            <br/>
+            <form action="$Env{"CGIHandle"}" method="post">
+                <input type="hidden" name="Action" value="$Env{"Action"}"/>
+                <input type="hidden" name="Subaction" value="Add"/>
+                <table width="100%" cellspacing="0" cellpadding="4">
+                    <tr>
+                        <td class="contenthead">$Text{"Add Customer Company"}:</td>
+                    </tr>
+                    <tr>
+                        <td class="contentbody">
+                            $Text{"Add a new Customer Company."}
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="contentfooter">
+                            <input class="button" type="submit" value="$Text{"Add"}"/>
+                        </td>
+                    </tr>
+                </table>
+            </form>
+        </td>
+        <td width="70%" class="mainbody">
 <!-- dtl:block:OverviewResult -->
-      <table width="100%" cellspacing="0" cellpadding="4">
-        <tr>
-          <td class="contenthead">$Text{"List"}:</td>
-        </tr>
-        <tr>
-          <td class="contentbody">
-            <table width="100%" border="0" cellspacing="0" cellpadding="3">
-              <tr>
-                <td class="contentkey" width="5%">$Text{"CustomerID"}</td>
-                <td class="contentkey" width="20%">$Text{"Name"}</td>
-                <td class="contentkey" width="25%">$Text{"Comment"}</td>
-                <td align="center" class="contentkey">$Text{"valid"}/$Text{"invalid"}</td>
-                <td class="contentkey">$Text{"Changed"}</td>
-                <td class="contentkey">$Text{"Created"}</td>
-              </tr>
+            <table width="100%" cellspacing="0" cellpadding="4">
+                <tr>
+                    <td class="contenthead">$Text{"List"}:</td>
+                </tr>
+                <tr>
+                    <td class="contentbody">
+                        <table width="100%" border="0" cellspacing="0" cellpadding="3">
+                            <tr>
+                                <td class="contentkey" width="5%">$Text{"CustomerID"}</td>
+                                <td class="contentkey" width="20%">$Text{"Name"}</td>
+                                <td class="contentkey" width="25%">$Text{"Comment"}</td>
+                                <td align="center" class="contentkey">$Text{"valid"}/$Text{"invalid"}</td>
+                                <td class="contentkey">$Text{"Changed"}</td>
+                                <td class="contentkey">$Text{"Created"}</td>
+                            </tr>
 <!-- dtl:block:OverviewResultRow -->
-              <tr>
-                <td class="$QData{"CssClass"}"><a href="$Env{"Baselink"}Action=$Env{"Action"}&Subaction=Change&CustomerID=$LQData{"CustomerID"}">$QData{"CustomerID","20"}</a></td>
-                <td class="$QData{"CssClass"}">$QData{"CustomerCompanyName"}</td>
-                <td class="$QData{"CssClass"}"><div title="$QData{"Comment"}">$QData{"CustomerCompanyComment","20"}</div></td>
-                <td align="center" class="$QData{"CssClass"}">$Text{"$QData{"Valid"}"}</td>
-                <td class="$QData{"CssClass"}">$TimeShort{"$QData{"ChangeTime"}"}</td>
-                <td class="$QData{"CssClass"}">$TimeShort{"$QData{"CreateTime"}"}</td>
-              </tr>
+                            <tr>
+                                <td class="$QData{"CssClass"}"><a href="$Env{"Baselink"}Action=$Env{"Action"}&Subaction=Change&CustomerID=$LQData{"CustomerID"}">$QData{"CustomerID","20"}</a></td>
+                                <td class="$QData{"CssClass"}">$QData{"CustomerCompanyName"}</td>
+                                <td class="$QData{"CssClass"}"><div title="$QData{"Comment"}">$QData{"CustomerCompanyComment","20"}</div></td>
+                                <td align="center" class="$QData{"CssClass"}">$Text{"$QData{"Valid"}"}</td>
+                                <td class="$QData{"CssClass"}">$TimeShort{"$QData{"ChangeTime"}"}</td>
+                                <td class="$QData{"CssClass"}">$TimeShort{"$QData{"CreateTime"}"}</td>
+                            </tr>
 <!-- dtl:block:OverviewResultRow -->
+                        </table>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="contentfooter">
+                        &nbsp;
+                    </td>
+                </tr>
             </table>
-          </td>
-        </tr>
-        <tr>
-          <td class="contentfooter">
-            &nbsp;
-          </td>
-        </tr>
-      </table>
 <!-- dtl:block:OverviewResult -->
 <!-- dtl:block:OverviewUpdate -->
-      <form action="$Env{"CGIHandle"}" method="post">
-        <input type="hidden" name="Action" value="$Env{"Action"}"/>
-        <input type="hidden" name="Subaction" value="$QData{"Action"}Action"/>
-        <input type="hidden" name="CustomerCompanyID" value="$QData{"CustomerCompanyID"}"/>
-        <table width="100%" cellspacing="0" cellpadding="4">
-          <tr>
-            <td class="contenthead">
-              $Text{"Edit"} ($Text{"$QData{"Action"}"}):
-            </td>
-          </tr>
-          <tr>
-            <td class="contentbody">
-              <table border="0" cellspacing="0" cellpadding="3">
+            <form action="$Env{"CGIHandle"}" method="post">
+                <input type="hidden" name="Action" value="$Env{"Action"}"/>
+                <input type="hidden" name="Subaction" value="$QData{"Action"}Action"/>
+                <input type="hidden" name="CustomerCompanyID" value="$QData{"CustomerID"}"/>
+                <table width="100%" cellspacing="0" cellpadding="4">
+                    <tr>
+                        <td class="contenthead">
+                            $Text{"Edit"} ($Text{"$QData{"Action"}"}):
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="contentbody">
+                            <table border="0" cellspacing="0" cellpadding="3">
 <!-- dtl:block:PreferencesGeneric -->
-                <dtl if ($Data{"ReadOnly"} ne "") { $Data{"TableFontStart"} = "<font color="#aaaaaa">"; }>
-                <dtl if ($Data{"ReadOnly"} ne "") { $Data{"TableFontStop"} = "</font>"; }>
+                                <dtl if ($Data{"ReadOnly"} ne "") { $Data{"TableFontStart"} = "<font color="#aaaaaa">"; }>
+                                <dtl if ($Data{"ReadOnly"} ne "") { $Data{"TableFontStop"} = "</font>"; }>
 <!-- dtl:block:PreferencesGenericInputHidden -->
-                <input type="hidden" name="$QData{"Name"}" value="$QData{"Value"}"/>
+                                <input type="hidden" name="$QData{"Name"}" value="$QData{"Value"}"/>
 <!-- dtl:block:PreferencesGenericInputHidden -->
 <!-- dtl:block:PreferencesGenericInput -->
-                <tr>
-                  <td width="40%" class="contentkey">
-                    $Data{"TableFontStart"}$Text{"$Data{"Item"}"}:$Data{"TableFontStart"}
-                    <font color="red" title="$Text{"This values are required."}">$Data{"Required"}</font>
-                    <font color="blue" title="$Text{"This values are read only."}">$Data{"ReadOnly"}</font>
-                  </td>
-                  <td class="contentvalue">
-                    <input type="text" name="$QData{"Name"}" value="$QData{"Value"}" size="35" maxlength="150" $QData{"ReadOnlyType"}/>
-                  </td>
-                </tr>
+                                <tr>
+                                    <td width="40%" class="contentkey">
+                                        $Data{"TableFontStart"}$Text{"$Data{"Item"}"}:$Data{"TableFontStart"}
+                                        <font color="red" title="$Text{"This values are required."}">$Data{"Required"}</font>
+                                        <font color="blue" title="$Text{"This values are read only."}">$Data{"ReadOnly"}</font>
+                                    </td>
+                                    <td class="contentvalue">
+                                        <input type="text" name="$QData{"Name"}" value="$QData{"Value"}" size="35" maxlength="150" $QData{"ReadOnlyType"}/>
+                                    </td>
+                                </tr>
 <!-- dtl:block:PreferencesGenericInput -->
 <!-- dtl:block:PreferencesGenericPassword -->
-                <tr>
-                  <td width="40%" class="contentkey">
-                    $Data{"TableFontStart"}$Text{"$Data{"Item"}"}:$Data{"TableFontStart"}
-                    <font color="red" title="$Text{"This values are required."}">$Data{"Required"}</font>
-                    <font color="blue" title="$Text{"This values are read only."}">$Data{"ReadOnly"}</font>
-                  </td>
-                  <td class="contentvalue">
-                    <input type="password" name="$QData{"Name"}" value="" size="35" maxlength="60" $QData{"ReadOnlyType"}/>
-                  </td>
-                </tr>
+                                <tr>
+                                    <td width="40%" class="contentkey">
+                                        $Data{"TableFontStart"}$Text{"$Data{"Item"}"}:$Data{"TableFontStart"}
+                                        <font color="red" title="$Text{"This values are required."}">$Data{"Required"}</font>
+                                        <font color="blue" title="$Text{"This values are read only."}">$Data{"ReadOnly"}</font>
+                                    </td>
+                                    <td class="contentvalue">
+                                        <input type="password" name="$QData{"Name"}" value="" size="35" maxlength="60" $QData{"ReadOnlyType"}/>
+                                    </td>
+                                </tr>
 <!-- dtl:block:PreferencesGenericPassword -->
 <!-- dtl:block:PreferencesGenericOption -->
-                <tr>
-                  <td width="40%" class="contentkey">
-                    $Data{"TableFontStart"}$Text{"$Data{"Item"}"}:$Data{"TableFontStop"}
-                    <font color="red" title="$Text{"This values are required."}">$Data{"Required"}</font>
-                    <font color="blue" title="$Text{"This values are read only."}">$Data{"ReadOnly"}</font>
-                  </td>
-                  <td class="contentvalue">$Data{"Option"}</td>
-                </tr>
+                                <tr>
+                                    <td width="40%" class="contentkey">
+                                        $Data{"TableFontStart"}$Text{"$Data{"Item"}"}:$Data{"TableFontStop"}
+                                        <font color="red" title="$Text{"This values are required."}">$Data{"Required"}</font>
+                                        <font color="blue" title="$Text{"This values are read only."}">$Data{"ReadOnly"}</font>
+                                    </td>
+                                    <td class="contentvalue">$Data{"Option"}</td>
+                                </tr>
 <!-- dtl:block:PreferencesGenericOption -->
 <!-- dtl:block:PreferencesGeneric -->
-              </table>
-            </td>
-          </tr>
-          <tr>
-            <td class="contentfooter">
-              <input class="button" type="submit" value="$Text{"Submit"}"/>
-            </td>
-          </tr>
-        </table>
-      </form>
+                            </table>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="contentfooter">
+                            <input class="button" type="submit" value="$Text{"Submit"}"/>
+                        </td>
+                    </tr>
+                </table>
+            </form>
 <!-- dtl:block:OverviewUpdate -->
-    </td>
-  </tr>
+        </td>
+    </tr>
 </table>
 <!-- dtl:block:Overview -->
