@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.993.2.49 2009-11-06 07:58:49 tt Exp $
+# $Id: CHANGES,v 1.993.2.50 2009-11-06 09:11:30 tt Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 2.4.6 (2009/??/??)
+ - (2009/11/06) Fixed bug#2069 - update of customer company id
  - (2009/11/06) Fixed bug#2948 - renamed crypt option "md5" to "md5-crypt" to
    avoid missunderstanding
  - (2009/10/26) Fixed bug#4455 - Input field in Preferences of a Dashboard
